--- a/environments/test-1.yaml
+++ b/environments/test-1.yaml
@@ -29,7 +29,7 @@ grains:
     spec:
       source:        
         path: terraform/simple-tf-module
-        store: test-spec2-public
+        store: torque-eac
       agent:
         name: '{{.inputs.compute_service_name}}'        
       inputs:
