--- a/environments/test-1.yaml
+++ b/environments/test-1.yaml
@@ -3,7 +3,7 @@ spec_version: 2
 environment:
   environment_name: eac-simple-env-3
   description: eac env for testing  1
-  owner_email: alexander.g@quali.com
+  owner_email: guy.s@quali.com
   state: active 
 
  
