--- a/blueprints/test-2.yaml
+++ b/blueprints/test-2.yaml
@@ -18,11 +18,40 @@ outputs:
 grains:
   tf1:
     kind: terraform
+    spec:
+      source:        
+        path: terraform/simple-tf-module
+        store: torque-eac
+        commit: ee302bc15bd4d8046626a4f980ba4bbfdc710821
+      agent:
+        name: '{{.inputs.compute_service_name}}'        
+      inputs:
+        - test_input1: '{{.inputs.tf_input}}'
+        - test_input2: "input2"        
+      outputs:
+        - output2
+  tf2:
+    kind: terraform
+    spec:
+      source:        
+        path: terraform/simple-tf-module
+        store: torque-eac
+        commit: ee302bc15bd4d8046626a4f980ba4bbfdc710821
+      agent:
+        name: '{{.inputs.compute_service_name}}'        
+      inputs:
+        - test_input1: '{{.inputs.tf_input}}'
+        - test_input2: "input2"        
+      outputs:
+        - output2
+  tf3:
+    kind: terraform
     # tf-version: 1.3.5
     spec:
       source:        
         path: terraform/simple-tf-module
-        store: test-spec2-public
+        store: torque-eac
+        commit: ee302bc15bd4d8046626a4f980ba4bbfdc710821
       agent:
         name: '{{.inputs.compute_service_name}}'        
       inputs:
