--- a/blueprints/test-2.yaml
+++ b/blueprints/test-2.yaml
@@ -20,7 +20,7 @@ grains:
     kind: terraform
     spec:
       source:        
-        path: terraform/simple-tf-module
+        path: terraform/buggy
         store: torque-eac
         commit: ee302bc15bd4d8046626a4f980ba4bbfdc710821
       agent:
