--- a/blueprints/sleep.yaml
+++ b/blueprints/sleep.yaml
@@ -8,3 +8,13 @@ workflow:
     - type: cron
       cron: '0 * * * *'
       overridable: true
+grains:
+  sleep:
+    kind: shell
+    spec:
+      agent:
+        name: 'Quali'
+      activities:
+        deploy:
+          commands:
+            - "sleep 120"
