--- a/blueprints/sleep.yaml
+++ b/blueprints/sleep.yaml
@@ -13,7 +13,7 @@ grains:
     kind: shell
     spec:
       agent:
-        name: 'Quali'
+        name: 'eks'
       activities:
         deploy:
           commands:
